--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de Verbos en Inglés 2ª ESO - Salesianos</title>
+    <!-- Metadatos del autor -->
+    <meta name="author" content="Víctor García Peña">
+    <meta name="description" content="web para repasar los verbos irregulares ingles 2º de la ESO">
+
     <style>
         body {
             font-family: 'Arial', sans-serif;
