--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Verbos en Inglés 2ª ESO - Salesianos</title>
-    <!-- Metadatos del autor -->
+    <title>Juego de Verbos en Inglés 2ª ESO - Salesianos</title><!-- Metadatos del autor -->
     <meta name="author" content="Víctor García Peña">
     <meta name="description" content="web para repasar los verbos irregulares ingles 2º de la ESO">
-
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -120,6 +118,12 @@
         <div id="final-score"></div>
         <button onclick="restartGame()">Reiniciar Juego</button>
     </div>
+
+    <div style="text-align: right; margin-top: 20px;">
+        <p style="margin: 0;">Power by: Víctor García Peña</p>
+        <p style="margin: 0; visibility: hidden;">xxxxx@gmail.com</p>
+    </div>
+    
 </div>
 
 <script>
@@ -176,7 +180,6 @@
         { infinitivo: 'lead', pasadoSimple: 'led', participioPasado: 'led', español: 'dirigir' },
         { infinitivo: 'know', pasadoSimple: 'knew', participioPasado: 'known', español: 'saber / conocer' },
         { infinitivo: 'learn', pasadoSimple: 'learnt', participioPasado: 'learnt', español: 'aprender' },
-
         { infinitivo: 'leave', pasadoSimple: 'left', participioPasado: 'left', español: 'dejar' },
         { infinitivo: 'lend', pasadoSimple: 'lent', participioPasado: 'lent', español: 'prestar' },
         { infinitivo: 'let', pasadoSimple: 'let', participioPasado: 'let', español: 'dejar' },
