--- a/index.html
+++ b/index.html
@@ -3,277 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Verbos en Inglés 2ª ESO - Salesianos</title>
-    <meta name="author" content="Víctor García Peña">
-    <meta name="description" content="web para repasar los verbos irregulares ingles 2º de la ESO">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f7f7f7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .container {
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            padding: 20px;
-            text-align: center;
-            width: 90%;
-            max-width: 400px;
-        }
-        h1 {
-            font-size: 28px;
-            color: #333;
-            margin-bottom: 20px;
-        }
-        h2 {
-            font-size: 22px;
-            color: #444;
-            margin-bottom: 15px;
-        }
-        button {
-            padding: 12px 25px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s, transform 0.2s;
-            margin: 5px;
-        }
-        button:hover {
-            background-color: #45a049;
-            transform: scale(1.05);
-        }
-        input[type="text"] {
-            margin-bottom: 15px;
-            width: 100%;
-            padding: 10px;
-            border-radius: 5px;
-            border: 2px solid #ddd;
-            box-sizing: border-box;
-        }
-        .correct {
-            color: green;
-        }
-        .incorrect {
-            color: red;
-        }
-        #question-counter {
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        #final-score {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-        .hidden {
-            display: none;
-        }
-        @media (max-width: 768px) {
-            .container {
-                width: 100%;
-                padding: 10px;
-            }
-            button {
-                width: 100%;
-                margin: 10px 0;
-            }
-        }
-    </style>
+    <title>Página de Inicio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<div class="container">
-    <h1>Juego de Verbos en Inglés 2ª ESO - Salesianos</h1>
-
-    <div id="start-options">
-        <h2>Elige el conjunto de verbos:</h2>
-        <button id="first50">Primeros 50 Verbos</button>
-        <button id="last50">Últimos 50 Verbos</button>
-        <button id="all">Todos los Verbos</button>
+    <div class="container">
+        <h1>Bienvenido al Juego de Verbos</h1>
+        <div class="button-container">
+            <a href="juego.html" class="active-btn">Verbos en Inglés 2º</a>
+            <a href="#" class="inactive-btn">Ejercicios 3º ESO (En construcción)</a>
+            <a href="#" class="inactive-btn">Ejercicios 4º ESO (En construcción)</a>
+            <a href="contacto.html" class="active-btn">Contacto</a>
+        </div>
     </div>
-
-    <div id="game" class="hidden">
-        <div id="question-counter">Pregunta 0/15</div>
-        <h2 id="question"></h2>
-
-        <input type="text" id="infinitive" placeholder="Infinitivo" aria-label="Infinitivo">
-        <input type="text" id="past" placeholder="Pasado Simple" aria-label="Pasado Simple">
-        <input type="text" id="participle" placeholder="Participio Pasado" aria-label="Participio Pasado">
-
-        <button id="submit-answer">Enviar Respuesta</button>
-        <div id="feedback"></div>
-    </div>
-
-    <div id="results" class="hidden">
-        <h2>Resultados</h2>
-        <div id="incorrect-answers"></div>
-        <div id="final-score"></div>
-        <button onclick="restartGame()">Reiniciar Juego</button>
-    </div>
-
-    <div style="text-align: right; margin-top: 20px;">
-        <p style="margin: 0;">Power by: Víctor García Peña</p>
-        <p style="margin: 0; visibility: hidden;">xxxxx@gmail.com</p>
-    </div>
-    
-</div>
-
-<script>
-    let selectedVerbs = [];
-    let currentVerb = {};
-    let score = 0;
-    let questionCount = 0;
-    const totalQuestions = 15;
-    let askedVerbs = [];
-    let incorrectVerbs = [];
-    let verbs = [];
-
-    async function loadVerbs() {
-        const response = await fetch('verbos.json'); 
-        const data = await response.json();
-        verbs = data.verbos.map(verb => ({
-            infinitivo: verb.Infinitive.toLowerCase(),
-            pasadoSimple: verb["Simple Past"].toLowerCase(),
-            participioPasado: verb["Past  Participle"].toLowerCase(),
-            español: verb.Castellano.toLowerCase()
-        }));
-    }
-
-    document.getElementById('first50').addEventListener('click', () => setVerbList('first50'));
-    document.getElementById('last50').addEventListener('click', () => setVerbList('last50'));
-    document.getElementById('all').addEventListener('click', () => setVerbList('all'));
-
-    window.onload = async function() {
-        await loadVerbs();
-    };
-
-    function setVerbList(option) {
-        if (option === 'first50') {
-            selectedVerbs = verbs.slice(0, 50);
-        } else if (option === 'last50') {
-            selectedVerbs = verbs.slice(-50);
-        } else {
-            selectedVerbs = verbs;
-        }
-        shuffleArray(selectedVerbs);
-        selectedVerbs = selectedVerbs.slice(0, totalQuestions);
-        document.getElementById('start-options').classList.add('hidden');
-        startGame();
-    }
-
-    function shuffleArray(array) {
-        for (let i = array.length - 1; i > 0; i--) {
-            const j = Math.floor(Math.random() * (i + 1));
-            [array[i], array[j]] = [array[j], array[i]];
-        }
-    }
-
-    function startGame() {
-        document.getElementById('game').classList.remove('hidden');
-        score = 0;
-        questionCount = 0;
-        askedVerbs = [];
-        incorrectVerbs = [];
-        showNewQuestion();
-    }
-
-    function showNewQuestion() {
-        if (questionCount >= totalQuestions) {
-            endGame();
-            return;
-        }
-
-        currentVerb = selectedVerbs[questionCount];
-        questionCount++;
-        document.getElementById('question-counter').textContent = `Pregunta ${questionCount}/15`;
-        document.getElementById('question').textContent = `¿Cuáles son las tres formas del verbo '${currentVerb.español}'?`;
-        clearInputs();
-    }
-
-    function submitAnswer() {
-        const userInfinitive = document.getElementById('infinitive').value.trim().toLowerCase();
-        const userPast = document.getElementById('past').value.trim().toLowerCase();
-        const userParticiple = document.getElementById('participle').value.trim().toLowerCase();
-
-        const correctInfinitive = currentVerb.infinitivo;
-        const correctPast = currentVerb.pasadoSimple;
-        const correctParticiple = currentVerb.participioPasado;
-
-        let isCorrect = true;
-        let feedback = '';
-
-        if (userInfinitive !== correctInfinitive) {
-            feedback += `<p class="incorrect">Infinitivo incorrecto. Correcto: ${correctInfinitive}</p>`;
-            isCorrect = false;
-        }
-
-        if (userPast !== correctPast) {
-            feedback += `<p class="incorrect">Pasado simple incorrecto. Correcto: ${correctPast}</p>`;
-            isCorrect = false;
-        }
-
-        if (userParticiple !== correctParticiple) {
-            feedback += `<p class="incorrect">Participio pasado incorrecto. Correcto: ${correctParticiple}</p>`;
-            isCorrect = false;
-        }
-
-        if (!isCorrect) {
-            incorrectVerbs.push({ verb: currentVerb, feedback });
-        } else {
-            score++;
-        }
-
-        document.getElementById('feedback').innerHTML = feedback;
-
-        if (questionCount < totalQuestions) {
-            showNewQuestion();
-        } else {
-            endGame();
-        }
-    }
-
-    document.getElementById('submit-answer').addEventListener('click', submitAnswer);
-
-    function clearInputs() {
-        document.getElementById('infinitive').value = '';
-        document.getElementById('past').value = '';
-        document.getElementById('participle').value = '';
-    }
-
-    function endGame() {
-        document.getElementById('game').classList.add('hidden');
-        document.getElementById('results').classList.remove('hidden');
-
-        const incorrectAnswersDiv = document.getElementById('incorrect-answers');
-        incorrectAnswersDiv.innerHTML = '';
-
-        incorrectVerbs.forEach(item => {
-            incorrectAnswersDiv.innerHTML += `<p>${item.feedback}</p>`;
-        });
-
-        const grade = score === 15 ? 10 :
-                      score === 14 ? 9 :
-                      score === 13 ? 8 :
-                      score === 12 ? 7 :
-                      score === 11 ? 6 :
-                      score === 10 ? 5 : "Necesitas estudiar más";
-        
-        document.getElementById('final-score').textContent = `Puntuación final: ${grade}`;
-    }
-
-    function restartGame() {
-        document.getElementById('results').classList.add('hidden');
-        document.getElementById('start-options').classList.remove('hidden');
-    }
-</script>
-
 </body>
 </html>
+
