--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,8 @@
 <body>
     <div class="container">
         <h1>Contacto</h1>
-        <p>Si ves algún error o quieres más información, contacta a Víctor García Peña a través del correo: victorgarciapena11@gmail.com</p>
+        <p>Si ves algún error o quieres más información, contacta conmigo a través del correo electronico</p>
+        <p>Víctor García Peña --- victorgarciapena11@gmail.com</p>
         <a href="index.html" class="back-btn">Volver a la página de inicio</a>
     </div>
 </body>
